gear swow http server dependencies

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "geardev/coroutines": "^0.0",
     "swow/swow": "v1.5.2",
     "geardev/processes": "^0.0",
-    "geardev/http-server": "^0.0"
+    "geardev/http-server": "^0.0",
+    "laravel/octane": "^2.4"
   }
 }
